<resources>
    <string name="app_name" translatable="false">ExCo</string>
    <string name="placeholder_string" translatable="false">Placeholder string</string>
    <string name="app_name_configuration_title" translatable="false">App Name</string>
    <string name="app_bundle" translatable="false">App Bundle</string>
    <string name="player_id" translatable="false">Player ID</string>
    <string name="app_category" translatable="false">AppCategory</string>
    <string name="app_store_url" translatable="false">AppStoreUrl</string>
    <string name="app_store_id" translatable="false">AppStoreId</string>
    <string name="app_version" translatable="false">AppVersion</string>
    <string name="app_device_id" translatable="false">AppDeviceId</string>
    <string name="ifa" translatable="false">IFA</string>
    <string name="player_configuration" translatable="false">Player Configuration</string>
    <string name="load_player" translatable="false">Load Player</string>
    <string name="button_back" translatable="false">Back Button</string>
    <string name="test" translatable="false">AppCategory\nAppCategory\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\A\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\ppCategoryn\\nAppCategory\n\AppCategoryn\\nAppCategory\n\AppCategoryn\AppCategory\nAppCategory\nAppCategory\nAppCategoryn\</string>
    <string name="xml_recyclerview_screen">XML - RecyclerView Screen</string>
    <string name="xml_scrollview_screen">XML - ScrollView Screen</string>
    <string name="set_index">Set Index</string>
    <string name="index">Yout Index</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="destroy">Destroy</string>
    <string name="initialize">Initialize</string>
    <string name="programmatic_screen">Programmatic Screen</string>
</resources>