<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/blue">

        <ImageButton
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_black"
            android:background="@color/blue"
            android:padding="16dp"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/screen_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/programmatic_screen"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            />
    </FrameLayout>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="70dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <com.exco.player.views.ExCoPlayerView
                android:id="@+id/player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/btn_initialize"
                    android:backgroundTint="@color/blue"
                    android:textColor="@color/white"
                    android:text="@string/initialize">
                </Button>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/btn_destroy"
                    android:backgroundTint="@color/blue"
                    android:textColor="@color/white"
                    android:text="@string/destroy"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_play"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue"
                    android:textColor="@color/white"
                    android:text="@string/play">
                </Button>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn_pause"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue"
                    android:textColor="@color/white"
                    android:text="@string/pause"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <EditText
                    android:id="@+id/et_index"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/index"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:hint="@string/index"
                    android:textColorHint="@color/gray"
                    android:focusable="auto"
                    android:text="">
                </EditText>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn_setIndex"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue"
                    android:textColor="@color/white"
                    android:text="@string/set_index"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>